--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "socket.io": "^4.8.0"
+    "remixicon": "^4.3.0",
+    "socket.io": "^4.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.14"
+    "nodemon": "^3.1.7",
+    "tailwindcss": "^3.4.13"
   }
 }
